@@ -1,5 +1,12 @@
 2001-08-31  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tcl.h: added TclCompileListCmd header
+	* generic/tclBasic.c: added TclCompileListCmd compile proc
+	* generic/tclCompCmds.c (TclCompileListCmd): function to compile
+	the 'list' command at parse time.
+	* generic/tclExecute.c (TclExecuteByteCode): definition of
+	INST_LIST bytecode.
+
 	* doc/StringObj.3: added words of warning to use Tcl_ResetResult
 	with the Tcl_Append* functions.
 
